--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "Dylan Warrener",
     "license": "ISC",
     "devDependencies": {
+        "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
         "html-webpack-plugin": "^5.5.1",
         "pinia": "^2.0.34",
@@ -22,6 +23,8 @@
         "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
+        "vue-style-loader": "^4.1.3",
+        "vue-template-compiler": "^2.7.14",
         "webpack": "^5.78.0",
         "webpack-cli": "^5.0.1",
         "webpack-dev-server": "^4.13.2",
