--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
     "description": "",
     "private": true,
     "scripts": {
-        "serve": "npm run dev && npm run start",
-        "start": "webpack-dev-server",
-        "build": "webpack -c webpack.config.js",
-        "dev": "webpack -c webpack.config.dev.js",
-        "prod": "webpack -c webpack.config.prod.js",
-        "test": "webpack -c webpack.config.single.js"
+        "serve": "npm run test && npm run start",
+        "start": "webpack serve",
+        "build": "webpack -c ./webpack.config.js",
+        "dev": "webpack -c ./webpack.config.dev.js",
+        "prod": "webpack -c ./webpack.config.prod.js",
+        "test": "webpack -c ./webpack.config.js",
+        "node": "node app.js"
     },
     "author": "Dylan Warrener",
     "license": "ISC",
     "devDependencies": {
+        "@babel/cli": "^7.21.5",
+        "@babel/core": "^7.21.8",
+        "@babel/polyfill": "^7.12.1",
+        "@babel/preset-env": "^7.21.5",
         "@vue/compiler-sfc": "^3.2.47",
         "babel-loader": "^9.1.2",
         "css-loader": "^6.7.3",
@@ -22,7 +27,6 @@
         "style-loader": "^3.3.2",
         "ts-loader": "^9.4.2",
         "typescript": "^5.0.3",
-        "vue": "^3.2.47",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
         "vue-style-loader": "^4.1.3",
@@ -33,6 +37,7 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "vue": "^3.2.47"
     }
 }
