--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-    "name": "test",
-    "version": "1.0.0",
-    "description": "",
-    "private": true,
-    "scripts": {
-        "serve": "npm run test && npm run start",
-        "start": "webpack serve",
-        "build": "webpack -c ./webpack.config.js",
-        "dev": "webpack -c ./webpack.config.dev.js",
-        "prod": "webpack -c ./webpack.config.prod.js",
-        "test": "webpack -c ./webpack.config.js",
-        "node": "node app.js"
-    },
-    "author": "Dylan Warrener",
-    "license": "ISC",
-    "devDependencies": {
-        "@babel/cli": "^7.21.5",
-        "@babel/core": "^7.21.8",
-        "@babel/polyfill": "^7.12.1",
-        "@babel/preset-env": "^7.21.5",
-        "@vue/compiler-sfc": "^3.2.47",
-        "babel-loader": "^9.1.2",
-        "css-loader": "^6.7.3",
-        "html-webpack-plugin": "^5.5.1",
-        "pinia": "^2.0.34",
-        "style-loader": "^3.3.2",
-        "ts-loader": "^9.4.2",
-        "typescript": "^5.0.3",
-        "vue-loader": "^17.0.1",
-        "vue-router": "^4.1.6",
-        "vue-style-loader": "^4.1.3",
-        "vue-template-compiler": "^2.7.14",
-        "webpack": "^5.78.0",
-        "webpack-cli": "^5.0.1",
-        "webpack-dev-server": "^4.13.2",
-        "webpack-merge": "^5.8.0"
-    },
-    "dependencies": {
-        "lodash": "^4.17.21",
-        "vue": "^3.2.47"
-    }
+  "name": "test",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
+  "scripts": {
+    "serve": "npm run test && npm run start",
+    "start": "webpack serve",
+    "build": "webpack --config webpack.config.js",
+    "dev": "webpack --config webpack.config.dev.js",
+    "prod": "webpack --config webpack.config.prod.js",
+    "test": "webpack --config webpack.config.js",
+    "node": "node app.js"
+  },
+  "author": "Dylan Warrener",
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.8",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.21.5",
+    "@vue/compiler-sfc": "^3.2.47",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
+    "pinia": "^2.0.35",
+    "style-loader": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.3",
+    "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.2",
+    "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "vue": "^3.2.47"
+  }
 }
