--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@babel/core": "^7.21.8",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.21.5",
+    "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.2.47",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "node-sass": "^8.0.0",
     "pinia": "^2.0.35",
+    "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.3",
