--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "webpack",
     "serve": "webpack serve"
   },
+  "sideEffects": [
+    "*.vue"
+  ],
   "author": "Dylan Warrener",
   "license": "ISC",
   "devDependencies": {
@@ -20,8 +23,9 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
-    "node-sass": "^8.0.0",
+    "mini-css-extract-plugin": "^2.7.5",
     "pinia": "^2.0.35",
+    "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
@@ -31,6 +35,7 @@
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
     "webpack": "^5.78.0",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2",
     "webpack-merge": "^5.8.0"
